日常遇到的一些问题整理

--- a/_posts/2018-04-15-工作经验之谈.md
+++ b/_posts/2018-04-15-工作经验之谈.md
@@ -14,7 +14,7 @@ typora-root-url: ..
 
 # 工作 经验
 
->关于imprt dateFns，打印失败
+#### 关于imprt dateFns，打印失败
 
 场景：使用npm包dateFns，先安装`npm install date-fns`，然后引入`import dateFns from 'date-fns' `，在使用时失败，尝试在引用下方打印`console.log(dateFns)`，失败
 
@@ -22,9 +22,9 @@ typora-root-url: ..
 
 总结：**查看npm官网** date-fns包
 
-![image-20200415084458289](/img/assets_2019/image-20200415084458289.png)
+<img src="/img/assets_2019/image-20200415084458289.png" alt="image-20200415084458289" style="zoom: 33%;" />
 
-> 关于提问
+#### 关于提问
 
 场景：产品需求中提及的页面打不开，我不知道是不是权限/账号限制，但是跟产品沟通的时候抱着求证的态度，这样沟通效率特别低
 
@@ -32,7 +32,7 @@ typora-root-url: ..
 
 总结：思考，除了日常工作，思考真的很重要
 
-> 关于cookie
+#### 关于cookie
 
 场景：本地调试的时候，想要更换登录账号开启不同状态，发现删除cookie中的log相关状态都不会提示登录
 
@@ -46,7 +46,7 @@ typora-root-url: ..
 
 总结：确认当前环境是使用append还是modify进行抓包
 
-> 关于页面打不开
+#### 关于页面打不开
 
 场景：产品给的活动链接页面打不开
 
@@ -56,14 +56,14 @@ typora-root-url: ..
 
 总结：学会部分注释，查看哪里阻塞了页面加载
 
-> 背景色铺满全屏
+#### 背景色铺满全屏
 
 ```css
 background-color:#f2f4f6;
 height:100vh;
 ```
 
-> 文字折叠
+### 文字折叠
 
 场景：不同手机上面，由于渲染尺寸不同，导致给了宽度的盒子里面的内容，折叠了
 
@@ -71,7 +71,37 @@ height:100vh;
 
 总结：注意不同机型的适配
 
+#### nextTick
 
+```js
+this.$nextTick([callback,context])
+```
 
+参数：
 
+- {Function}     [callback]
+- {Object}     [context]
+
+用法：
+
+在下次 DOM 更新循环结束之后执行延迟回调；
+
+在修改数据之后立即使用这个方法，获取更新后的 DOM，比如配合ref使用；
+
+**ref 需要在Dom渲染完成后才会有**，在使用的时候确保Dom已经渲染完成；
+
+```js
+// 修改数据 
+vm.msg = 'Hello' 
+// DOM 还没有更新 
+Vue.nextTick(function () { 
+	// DOM 更新了 
+}) 
+
+// 作为一个 Promise 使用 (2.1.0 起新增，详见接下来的提示) 
+Vue.nextTick() 
+	.then(function () { 
+		// DOM 更新了 
+})
+```
 
