--- a/_posts/2020-03-20-工作 路由跳转.md
+++ b/_posts/2020-03-20-工作 路由跳转.md
@@ -20,12 +20,38 @@ typora-root-url: ..
 
 总结：
 
-> HTML和Script
+#### HTML和Script
 
 1. `<a href=''></a>`
-2. `window.location.href = ''`在script中可以直接执行
 
-> vue路由跳转有四种方式
+2. `window.location.href/replace`（在script中可以直接执行）
+
+```js
+window.location.href = '${location.origin}/some/where/to/go.html'
+// 若跳转，并不让返回
+window.location.replace(`${location.origin}/some/where/to/go.html`);
+```
+3. 通过`ref`标注对象，执行定位方法直接定位到指定元素
+
+```js
+this.$refs.rules.scrollIntoView();
+```
+
+4. `window.scrollTo`方法
+
+```js
+window.scrollTo(0, this.$refs.rules.offsetTop);
+```
+
+#### 微信小程序里面跳转
+
+```js
+wx.redirectTo({
+    url: `/pages/some/where/togo_code=${code}&id=${id}&a=1`,
+});
+```
+
+#### vue路由跳转有四种方式
 
 1. `<router-link :to="/home"或者"{name:'home'}"或者"{path:'/home'}">`
 
@@ -39,7 +65,6 @@ typora-root-url: ..
 
    go(n) 向前或者向后跳转n个页面，n可为正整数，如1，或负整数，如-1；
 
-   
 
 > 注意：带参数的情况
 
