--- a/_posts/2020-03-24-工作 数组方法统计.md
+++ b/_posts/2020-03-24-工作 数组方法统计.md
@@ -20,6 +20,8 @@ typora-root-url: ..
 
 总结：
 
+会改变原数组的方法：push,pop,shift,unshift,reverse,sort,splice
+
 除了抛出异常外，foreach的遍历不能中止；
 
 some、find可以找到第一个返回true值之后停止；
