--- a/_posts/vue相关内容/2020-06-15-vue3.0新特性.md
+++ b/_posts/vue相关内容/2020-06-15-vue3.0新特性.md
@@ -78,8 +78,10 @@ handle方法中有get()和set()，在get()中执行track()依赖收集，在set(
    2、传统vdom性能跟模版大小正相关，跟动态节点的数量无关
 
 3.0优化工作
-   1、将AST基于动态节点指令（if,for,slot）切割为嵌套的区块
-   2、主动检测模版中的静态节点
+   1、将AST基于动态节点指令（if,for,slot）切割为嵌套的区块，更新一个块内节点的时候，就不需要递归遍历树，可以跟踪平面的数组了。执行开销小了一个数量级。   
+
+   2、使用编译器Compiler主动检测模版中的静态节点，将其提升到render函数之外，避免在每次渲染时都重新创建对象，提高内存使用率、减少垃圾回收频率。   
+
    3、给元素一个追踪标记，无论层级嵌套多深，更新时可以直接遍历动态节点
 
 3.0的新策略将vdom更新性能与模版大小解耦，变为与动态节点的数量相关，整体比vue2性能提升2～5倍。
@@ -116,3 +118,57 @@ handle方法中有get()和set()，在get()中执行track()依赖收集，在set(
 // monorepo结构介绍
 'https://trunkbaseddevelopment.com/monorepos/'
 ```
+
+### 7、其他一些
+
+1⃣️函数式风格的入口是 setup 函数（取代之前的data函数），采用了函数式风格后可以享受如下好处：类型自动推导、减少打包体积。
+
+vue3.0将组件的逻辑都写在了函数内部，setup()会取代vue2.x的data()函数，返回一个对象，暴露给模板，而且只在初始化的时候调用一次，因为值可以被跟踪。
+
+2⃣️新的函数api：const count = value(0)，要注意的是，value() 返回的是一个对象，通过 .value 才能访问到其真实值。
+
+3⃣️另一个重要 API 就是 watch，之所以要 watch，因为在 Vue 中，setup 函数**仅执行一次**，所以不像 React Function Component，每次组件 props 变化都会重新执行，因此无论是在变量、props 变化时如果想做一些事情，都需要包裹在 watch 中。
+
+4⃣️onMounted生命周期函数直接注入。
+
+5⃣️支持 Source map。
+
+- 内置标识符前缀（又名"stripWith"）
+- 内置整齐打印（pretty-printing）功能
+
+6⃣️目录结构变化
+
+移除了配置文件目录，config 和 build 文件夹；
+
+移除了 static 文件夹，新增 public 文件夹，并且 index.html 移动到 public 中；
+
+在 src 文件夹中新增了 views 文件夹，用于分类 视图组件 和 公共组件 ；
+
+7⃣️启动项目
+
+3.0启动npm run serve
+
+2.0启动npm run dev
+
+8⃣️和React的对比
+
+Mutable和Immutable：
+
+- Vue：Mutable     + Template
+- React：Immutable     + JSX
+
+###### Immutable：
+
+**简化复杂的功能**：不可变性是的复杂的特性容易实现，比如进行游戏中的时间回溯，日常业务中的撤销和恢复功能。不直接在数据上修改可以让我们追溯并复用游戏的历史记录；
+
+**跟踪数据的改变**：如果直接修改数据，那么就很难追踪到数据的改变。跟踪数据的改变需要可变对象可以与之改变之前的版本进行对比，这样整个对象树都需要被遍历一次。跟踪不可变数据的变化相对来说就容易多了。如果发现对象变成了一个新对象，那么我们就可以说对象发生改变了；
+
+确定在**React中何时重新渲染**：不可变性最主要的优势在于他可以帮助我们在React中创建pure components。我们可以很轻松的确定不可变数据是否发生了改变，从而确定何时对组件进行重新渲染。
+
+###### Mutable：
+
+js的对象一般是可变的，因为使用了引用赋值，新的对象简单的引用了原始对象，改变新的对象将影响到原始对象；
+
+优点是频繁的修改对象时都是在原对象的基础上修改，并不需要重新创建，这样可以**有效的利用内存**，不会造成内存空间的浪费；
+
+缺点在于应用比较复杂的时候，频繁修改数据，风险比较大。
