小程序扫码需解码后才能使用参数

--- a/_posts/2018-04-15-工作经验之谈.md
+++ b/_posts/2018-04-15-工作经验之谈.md
@@ -63,7 +63,7 @@ background-color:#f2f4f6;
 height:100vh;
 ```
 
-### 文字折叠
+#### 文字折叠
 
 场景：不同手机上面，由于渲染尺寸不同，导致给了宽度的盒子里面的内容，折叠了
 
@@ -105,3 +105,21 @@ Vue.nextTick()
 })
 ```
 
+#### jQuery
+
+```js
+// 移除本身
+$(this).remove(); 
+// 删除本身子元素
+$(this).empty();
+```
+
+#### 小程序
+
+小程序扫码的时候，带的链接需要解码后才能使用
+
+```js
+const scene = decodeURIComponent(query.scene);
+```
+
+![image-20200615163634880](/img/assets_2019/image-20200615163634880.png)
