页面跳转多种场景

--- a/_posts/2018-04-15-工作经验之谈.md
+++ b/_posts/2018-04-15-工作经验之谈.md
@@ -24,6 +24,10 @@ typora-root-url: ..
 
 <img src="/img/assets_2019/image-20200415084458289.png" alt="image-20200415084458289" style="zoom: 33%;" />
 
+<img src="/img/assets_2019/image-20200615170746000.png" alt="image-20200615170746000" style="zoom: 67%;" />
+
+![image-20200615170814164](/img/assets_2019/image-20200615170814164.png)
+
 #### 关于提问
 
 场景：产品需求中提及的页面打不开，我不知道是不是权限/账号限制，但是跟产品沟通的时候抱着求证的态度，这样沟通效率特别低
