--- a/_posts/2020-03-20-工作 页面跳转.md
+++ b/_posts/2020-03-20-工作 页面跳转.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     工作 路由跳转
+title:     工作 页面跳转
 subtitle:  
 date:       2020-03-20
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 工作 路由跳转
+# 工作 页面跳转
 
 场景：实现一个页面跳转的时候，要通过改变路由地址来刷新当前页面内容。
 
@@ -50,6 +50,19 @@ wx.redirectTo({
     url: `/pages/some/where/togo_code=${code}&id=${id}&a=1`,
 });
 ```
+
+```js
+// 会将调用该方法的页面加入堆栈
+wx.navigateTo({
+		url:'/some/where/to/go',
+})
+// 返回到上一页后
+wx.navigateBack({
+  delta: 2, // 返回前2页
+})
+```
+
+
 
 #### vue路由跳转有四种方式
 
