微信小程序--分享方法的使用

--- a/_posts/2019-07-11-js相关 面试问题.md
+++ b/_posts/2019-07-11-js相关 面试问题.md
@@ -1176,6 +1176,8 @@ const flatten = (arr) => {
 
 第六种：...扩展运算符
 
+【注意】：扩展运算符（...）内部使用for...of循环
+
 ```javascript
 while (arrays.some(Array.isArray)) {
 	arrays = [].concat(...arrays);
