--- a/_posts/2020-05-09-工作 git的使用.md
+++ b/_posts/2020-05-09-工作 git的使用.md
@@ -29,9 +29,8 @@ git reset HEAD~ #撤销上一次的commit操作
 git status # 在每一步操作后都可以执行一下，看下现在的状态
 git pull origin # 再拉一下远程代码，确认冲突
 git push
+git reset --soft HEAD^ # 可以成功撤销上一次commit，并且保留代码
 ```
-
-
 
 ```javascript
 git diff branch1 branch2                  # 显示出所有有差异的文件的详细差异
