--- a/_posts/vue相关内容/2020-06-15-vue3.0新特性.md
+++ b/_posts/vue相关内容/2020-06-15-vue3.0新特性.md
@@ -39,7 +39,7 @@ typora-root-url: ..
 
 总结：从6个方面抛出新特性，感兴趣的小伙伴自己去找源码深入～
 
-<img src="/img/assets_2019/image-20200615101534019.png" alt="image-20200615101534019" style="zoom:50%;" />
+<img src="/../img/assets_2019/image-20200616221734601.png" alt="image-20200616221734601" style="zoom:35%;" />
 
 ### 1、双向绑定
 
