微信小程序 页面通信

--- a/_posts/2020-03-20-工作 页面跳转.md
+++ b/_posts/2020-03-20-工作 页面跳转.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     工作 页面跳转
+title:     页面跳转--多种
 subtitle:  
 date:       2020-03-20
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 工作 页面跳转
+# 页面跳转--多种
 
 场景：实现一个页面跳转的时候，要通过改变路由地址来刷新当前页面内容。
 
@@ -46,20 +46,35 @@ window.scrollTo(0, this.$refs.rules.offsetTop);
 #### 微信小程序里面跳转
 
 ```js
-wx.redirectTo({
-    url: `/pages/some/where/togo_code=${code}&id=${id}&a=1`,
-});
-```
-
-```js
 // 会将调用该方法的页面加入堆栈
 wx.navigateTo({
 		url:'/some/where/to/go',
 })
-// 返回到上一页后
+// 返回到上一页后，会刷新上一个页面的onShow方法
 wx.navigateBack({
   delta: 2, // 返回前2页
 })
+```
+
+注：想要被刷新的方法放在`onshow()`中，不想被刷新的放在`onload()`中；
+
+如果整个页面都要刷新，可以将`onLoad()`方法在`onshow()`中进行调用；
+
+其他跳转方式：
+
+```js
+// 只能跳转到tabBar的配置页面
+wx.switchTab({
+  url: '/page/index',
+});
+// 关闭当前页面，跳转指定页面
+wx.redirectTo({
+ 	url: `/pages/some/where/togo_code=${code}&id=${id}&a=1`,
+});
+// 关闭所有页面，跳转指定页面
+wx.reLaunch({
+  url: '/page/index',
+});
 ```
 
 
