--- a/_posts/2020-03-24-字符串方法统计 .md
+++ b/_posts/2020-03-24-字符串方法统计 .md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     工作 字符串方法统计
+title:     字符串方法统计
 subtitle:  
 date:       2020-03-20
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 工作 字符串方法统计
+# 字符串方法统计
 
 场景：接口数据返回的数据，有些有html结尾，有些没有，想统一。
 
