--- a/_posts/2020-03-24-数组方法统计.md
+++ b/_posts/2020-03-24-数组方法统计.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     工作 数组方法统计
+title:     数组方法统计
 subtitle:  
 date:       2020-03-20
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 工作 数组方法统计
+# 数组方法统计
 
 场景：遍历一个数组，找到满足条件的第一项后停止遍历。
 
