块级格式化上下文

--- a/_posts/css相关内容/2019-06-29-《精通CSS 第三版》.md
+++ b/_posts/css相关内容/2019-06-29-《精通CSS 第三版》.md
@@ -273,4 +273,4 @@ h1 {
 
 当一个元素具备了触发新块级格式化上下文的条件，**并且挨着一个浮动元素**时，它就会忽略自己的边界必须接触自己的包含块边界的规则。此时，**这个元素会收缩到适当大小**，不仅行盒子如此，所有盒子都如此。
 
-![1575985045757](/img/assets_2019/1575985045757.png)
+![](/../img/assets_2019/1575985045757.png)
