--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -42,17 +42,13 @@ typora-root-url: ..
 **BFC块级格式化上下文的特征**：
 
 - 内部的Box会在**垂直方向**，从顶部开始**一个接一个**地放置；
-
 - Box垂直方向的距离由margin决定。属于同一个BFC的两个**相邻Box的margin会发生叠加**。
-
 - 每个元素的margin box的左边， **与包含块**border box的**左边相接触**，即使存在浮动也是如此。
-
 - BFC的区域不会与float box叠加。
-
 - BFC就是页面上的一个**隔离的独立容器**，容器里面的子元素**不会影响到外面的元素**，反之亦然。
-
 - 计算BFC的高度时，**浮动元素也参与计算**。
 
+注意：块格式化上下文**包含创建它的元素内部的所有内容**；
 
 **创建块级格式化上下文**：
 
