--- a/_posts/2020-10-30-工作 父子组件通信.md
+++ b/_posts/2020-10-30-工作 父子组件通信.md
@@ -14,7 +14,7 @@ typora-root-url: ..
 
 # 工作 父子组件通信
 
-场景：子组件中的方法在子组件中并没有调用，在父组件中使用 ref 调用子组件的方法；这是一种不怎么常见的父子组件通信，所以趁此机会，整理一下所有的父子组件通信，涨下见识
+场景：子组件中的方法在子组件中并没有调用，而是在父组件中使用 ref 调用子组件的方法；这是一种不怎么常见的父子组件通信，所以趁此机会，整理一下所有的父子组件通信，涨下见识
 
 参考：
 
