modify：图片路径修改
本地分组后无法正确展示照片
测试更改路径后是否影响线上展示

--- a/_posts/项目问题/2019-07-31-微信小程序(量寻).md
+++ b/_posts/项目问题/2019-07-31-微信小程序(量寻).md
@@ -32,10 +32,6 @@ typora-root-url: ..
   },
 ```
 
-输出的是
-
-![1565788467936](C:\GitHub\CodingWithAlice.github.io\img\assets_2019\1565788467936.png)
-
 ### 3.`picker`使用无效问题解决
 
 ```html
@@ -127,11 +123,11 @@ goToIndex() {
 
 登录逻辑如下
 
-![](/img/assets_2019/未命名文件 (5).png)
+![](/../img/assets_2019/未命名文件 (5).png)
 
 在写代码的时候，还要考虑到本地缓存，以及token过期的问题，其中登录逻辑如上图
 
-![](/img/assets_2019/未命名文件 (4).png)
+![](/../img/assets_2019/未命名文件 (4).png)
 
 #### 7.清空input表单数据
 
