modify：图片路径处理
同上

--- a/_posts/css相关内容/2020-03-16-工作 压缩图片 webp.md
+++ b/_posts/css相关内容/2020-03-16-工作 压缩图片 webp.md
@@ -61,5 +61,5 @@ const isSupportWebp = document.createdElement('canvas').toDataURL('image/webp').
 
 3、根据服务端的请求头信息判断
 
-![img](/img/assets_2019/index.png)
+![img](/../img/assets_2019/index.png)
 
