--- a/_posts/css相关内容/2020-03-18-工作 安卓字体上浮.md
+++ b/_posts/css相关内容/2020-03-18-工作 安卓字体上浮.md
@@ -26,7 +26,7 @@ typora-root-url: ..
 
 首先要明确，字体大小和`font-family`是息息相关的，不同的字体，即使设置了`heigth:100px;`，盒子高度（content-area）还是不同，如下图：
 
-![img](/img/assets_2019/font-size-line-height.png)
+![img](/../img/assets_2019/font-size-line-height.png)
 
 
 
@@ -36,7 +36,7 @@ typora-root-url: ..
 
 如果单独给一行内的几个元素设置不同的字体，那么就会出现如下图的第二行，由于内联元素的高度，整行高度都是偏大的：
 
-![image-20200318183637692](/img/assets_2019/image-20200318183637692.png)
+![image-20200318183637692](/../img/assets_2019/image-20200318183637692.png)
 
 
 
@@ -52,7 +52,7 @@ typora-root-url: ..
 
 **line-height**和content-area的关系可以如下图：
 
-![image-20200318225805267](/img/assets_2019/image-20200318225805267.png)
+![image-20200318225805267](/../img/assets_2019/image-20200318225805267.png)
 
 已知，内联元素的高度计算是基于height、margin、border属性。若设置`height:auto;`，会出现`line-height=content-area`的情况。
 
@@ -64,7 +64,7 @@ typora-root-url: ..
 
 **vertical-align**默认为`baseline`，基线对齐。但是这个属性值在一行内有两个字体的内联元素时，会导致更大的行盒高度。
 
-![image-20200318231259864](/img/assets_2019/image-20200318231259864.png)
+![image-20200318231259864](/../img/assets_2019/image-20200318231259864.png)
 
 **vertical-align**设置为`middle`是不是就可以解决呢？规范中描述middle取的中间值与parent和baseline of parent box有关。并不可靠，这些因素不是css能设置的。
 
