--- a/_posts/vue相关内容/2019-06-26-Vue2.0官方文档 知识点总结 2.md
+++ b/_posts/vue相关内容/2019-06-26-Vue2.0官方文档 知识点总结 2.md
@@ -15,7 +15,7 @@ typora-root-url: ..
 
 先弄清除transition标签的原理，下图是出现动画的 class 添加情况：
 
-![](/img/assets_2019/transition原理.jpg)
+![](/../img/assets_2019/transition原理.jpg)
 
 如上图所示，动画开始的第一瞬间，为标签添加 class `v-enter`和`v-enter-active`两个标签；第一瞬间过去，就会马上将`v-enter`移除，来引发变化的动画动作，同时添加`v-enter-to`；动画结束后，将class全部移除。
 
@@ -59,7 +59,7 @@ typora-root-url: ..
 
 同时，还有结束动画的效果：
 
-![](/img/assets_2019/transition原理2.jpg)
+![](/../img/assets_2019/transition原理2.jpg)
 
 如上图所示，动画开始的第一瞬间，为标签添加 class `v-leave`和`v-leave-active`两个标签；第一瞬间过去，就会马上将`v-leave`移除，同时添加`v-leave-to` 来引发变化的动画动作；动画结束后，将class全部移除。
 
