--- a/_posts/vue相关内容/2020-06-15-vue3.0新特性.md
+++ b/_posts/vue相关内容/2020-06-15-vue3.0新特性.md
@@ -63,7 +63,7 @@ typora-root-url: ..
 
 核心：主要通过函数reactive()给对象新增一个Proxy对象监听内部的属性来实现数据监听，部分源码如下
 
-<img src="/img/assets_2019/image-20200615102127870.png" alt="image-20200615102127870" style="zoom:30%;" />
+<img src="/../img/assets_2019/image-20200615102127870.png" alt="image-20200615102127870" style="zoom:30%;" />
 
 解析：通过`observed = new Proxy(target, handle);`给每一个传入的target对象包一个Proxy对象，有操作时触发`handle`方法；
 
