--- a/_posts/项目问题/2019-09-03-旅游移动端.md
+++ b/_posts/项目问题/2019-09-03-旅游移动端.md
@@ -148,7 +148,7 @@ export default {
 
 **带来的问题**：再次加载页面的时候不会再执行`mounted()`当中的方法，同时由于使用了`keep-alive`会让页面多出生命周期函数`activated()`，表示当前**页面重新显示**的时候。
 
-![1567605471639](/img/assets_2019/1567605471639.png)
+![1567605471639](/../img/assets_2019/1567605471639.png)
 
 **带来的变化**：首次加载一个页面的时候，`mounted()`和`activated()`**一起执行**；后来重复访问页面的时候，只有`activated()`执行；（注意解绑全局事件）
 
@@ -166,7 +166,7 @@ background-image:liner-gradient(top,rgba(0,0,0,0),rgba(0,0,0,.8));
 
 #### 14.递归组件：自己调用自己（其中数据要用绑定的:list获得）
 
-![1567605498012](/img/assets_2019/1567605498012.png)
+![1567605498012](/../img/assets_2019/1567605498012.png)
 
 #### 16.axios的简单写法
 
@@ -181,5 +181,5 @@ axios.get('/api/detail.json',{params:this.$route.params.id}).then(...)
 
 异步组件是指：打包上线后，点击进入什么页面 ，再加载什么页面的js逻辑，而不是一次性加载
 
-![](/img/assets_2019/1567605838370.png)
+![](/../img/assets_2019/1567605838370.png)
 
