add：工作 git的使用2
工作 git的使用2

--- a/_posts/2020-05-09-工作 git的使用1.md
+++ b/_posts/2020-05-09-工作 git的使用1.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     工作 git的使用
+title:     工作 git的使用1
 subtitle:  
 date:       2020-05-09
 author:     
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-# 工作 git的使用
+# 工作 git的使用1
 
 场景：工作里面经常使用git，自己拉分支，或者多人在一个分支上面开发；之前整理过git的使用方法，但是因为缺少实践，所以没有很深的印象
 
