--- a/_posts/HTTP相关/2021-04-19-01 HTTP发展史.md
+++ b/_posts/HTTP相关/2021-04-19-01 HTTP发展史.md
@@ -14,15 +14,27 @@ typora-root-url: ..
 
 # 01 HTTP发展史
 
-HTTP 协议始于三十年前蒂姆·伯纳斯 - 李的一篇论文；
-HTTP/0.9 是个简单的文本协议，只能获取文本资源；
-HTTP/1.0 确立了大部分现在使用的技术，但它不是正式标准；
-HTTP/1.1 是目前互联网上使用最广泛的协议，功能也非常完善；
-HTTP/2 基于 Google 的 SPDY 协议，注重性能改善，但还未普及；
-HTTP/3 基于 Google 的 QUIC 协议，是将来的发展方向。
+- 总结
+
+1、HTTP 协议始于三十年前蒂姆·伯纳斯 - 李的一篇论文；
+2、HTTP/0.9 是个简单的文本协议，只能获取文本资源；
+3、HTTP/1.0 确立了大部分现在使用的技术，但它不是正式标准；
+4、HTTP/1.1 是目前互联网上使用最广泛的协议，功能也非常完善；
+5、HTTP/2 基于 Google 的 SPDY 协议，注重性能改善，但还未普及；
+6、HTTP/3 基于 Google 的 QUIC 协议，是将来的发展方向。
 
 ## HTTP/0.9
 结构比较简单，为了便于服务器和客户端处理，它也采用了**纯文本格式**。蒂姆·伯纳斯 - 李最初设想的系统里的文档都是只读的，所以只允许用“GET”动作从服务器上获取 HTML 文档，并且在响应请求之后立即关闭连接，功能非常有限
+
+有三个特点：
+
+1、只有一个**请求行**，没有请求头/体
+
+2、没有返回头信息，只返回数据
+
+3、返回的内容以**ASCII字符**来传输
+
+<img src="/../img/assets_2019/image-20210506174306712.png" alt="image-20210506174306712" style="zoom:80%;" />
 
 ## HTTP/1.0 - 并不是标准，只是一份使用文档
 1、增加了 **HEAD、POST** 等新方法；
@@ -38,6 +50,8 @@ HTTP/3 基于 Google 的 QUIC 协议，是将来的发展方向。
 3、明确了连接管理，**允许持久连接**；
 4、允许**响应数据分块**（chunked），利于传输大文件；
 5、强制要求 **Host 头**，让互联网主机托管成为可能
+
+目前浏览器中对于同一个域名，默认允许同时建立 6 个 TCP 持久连接
 
 ## HTTP/2 - 还未普及
 在高度兼容 HTTP/1.1 的情况下，主要特点：
