--- a/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
+++ b/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
@@ -21,6 +21,7 @@ typora-root-url: ..
 4、HTTP/2 的消息不再是`Header+Body`的形式，而是分散为多个**二进制帧**
 5、HTTP/2 使用**虚拟的流**传输消息，解决了困扰多年的**队头阻塞**问题，同时实现了**多路复用**，提高连接的利用率
 6、HTTP/2 也增强了安全性，要求至少是 TLS1.2，而且禁用了很多不安全的密码套件
+7、设置请求的优先级
 
 ## 版本号名字
  HTTP/2 工作组明确只使用大版本号，每当发布新版本的 HTTP 协议都会有本质的不同，绝不会有零敲碎打的小改良
@@ -54,7 +55,13 @@ HTTP/1 里纯文本形式的报文 --> HTTP/2 全面采用二进制格式
 在**流**的层面上看，消息是一些有序的**帧**序列，而在**连接**的层面上看，消息却是乱序收发的**帧**。多个请求 / 响应之间没有了顺序关系，不需要排队等待，也就不会再出现**队头阻塞**问题，降低了延迟，大幅度提高了连接的利用率。
 <img src="/../img/assets_2019/image-20210429140038297.png" alt="image-20210429140038297" style="zoom:35%;" />
 
+
+## 设置请求的优先级
+HTTP/2 提供了请求优先级，可以在发送请求时，标上该请求的优先级，这样服务器接收到请求之后，会优先处理优先级高的请求
+
+
 ## 服务器推送
+
 HTTP/2 还在一定程度上改变了传统的`请求 - 应答`工作模式，服务器不再是完全被动地响应请求，也可以**新建“流”主动向客户端发送消息**。比如，在浏览器刚请求 HTML 的时候就提前把可能会用到的 JS、CSS 文件发给客户端，减少等待的延迟，这被称为“服务器推送”（Server Push，也叫 Cache Push）。
 
 ## 强化安全
