--- a/_posts/HTTP相关/2021-05-06-27 HTTP3.md
+++ b/_posts/HTTP相关/2021-05-06-27 HTTP3.md
@@ -25,9 +25,11 @@ typora-root-url: ..
 ## 为什么说HTTP2 没有完全解决队头堵塞呢？
 HTTP/2 虽然使用`帧` `流` `多路复用`，没有了队头阻塞，但这些手段都是在**应用层**里，而在下层**传输层的 TCP 协议**里，还是会发生队头阻塞
 
--    **TCP队头堵塞**
-当HTTP/2把多个`请求 - 响应`分解成流，交给 TCP 后，TCP 会再拆成更小的包`segment`依次发送
-TCP 为了保证可靠传输，有个特别的**丢包重传**机制，丢失的包必须要**等待重新传输确认**，其他的包即使已经收到了，也只能放在缓冲区里，**上层的应用拿不出来**，只能干着急
+- **TCP队头堵塞**
+  当HTTP/2把多个`请求 - 响应`分解成流，交给 TCP 后，TCP 会再拆成更小的包`segment`依次发送
+  TCP 为了保证可靠传输，有个特别的**丢包重传**机制，丢失的包必须要**等待重新传输确认**，其他的包即使已经收到了，也只能放在缓冲区里，**上层的应用拿不出来**，只能干着急
+
+  <img src="/../img/assets_2019/image-20210506201914250.png" alt="image-20210506201914250" style="zoom:70%;" />
 
 ## HTTP/3  -- HTTP over QUIC
 
