add：内容安全策略 CSP
add：内容安全策略 CSP

--- a/_posts/HTTP相关/2021-05-07-XSS 和 CSRF 攻击.md
+++ b/_posts/HTTP相关/2021-05-07-XSS 和 CSRF 攻击.md
@@ -142,3 +142,51 @@ XSS攻击 Cross Site Script ：即**跨域脚本攻击**（为和CSS区分，改
 | HttpOnly标准 （防止劫取 Cookie） （HttpOnly是服务器通过 HTTP 响应头来设置的） | 浏览器禁止页面的JS 访问带有 HttpOnly 属性的Cookie <img src="/../img/assets_2019/image-20210507111719291.png" alt="image-20210507111719291" style="zoom:40%;" /> | 攻击者通过注入恶意脚本获取用户的Cookie信息，发起Cookie劫持攻击；HttpOnly **【阻止 XSS 攻击后的 Cookie 劫持攻击】**； |
 |                用户的输入检查 （XSS Filter）                 | 不要相信用户的任何输入，要进行检查、过滤和转义；             | 检查用户输入中是否包含 <，> 等特殊字符，如果存在，则对特殊字符进行过滤或编码 |
 |                        服务端输出检查                        | 除富文本的输出外，在变量输出到 HTML 页面时，可以使用编码或转义的方式来防御 XSS 攻击 |                                                              |
+
+### 【踩坑汇总】内容安全策略 CSP
+
+现在主流的浏览器内置了CSP，它的实现/执行全部由浏览器完成，开发者只需配置。
+
+【CSP 实质】
+
+白名单制度，开发者明确告诉客户端，哪些外部资源可以加载和执行，等同于提供白名单。
+
+【CSP 作用】
+
+- 限制加载其他域下的资源文件，这样即使黑客插入了一个 JavaScript 文件，这个 JavaScript 文件也是无法被加载的
+- 禁止向第三方域提交数据，这样用户数据也不会外泄
+- 禁止执行内联脚本和未授权的脚本
+- 还提供了上报机制，这样可以帮助我们尽快发现有哪些 XSS 攻击，以便尽快修复问题
+
+启用后，不符合 CSP 的外部资源就会被阻止加载，报错截图如下：
+
+<img src="/../img/assets_2019/image-20210507112712103.png" alt="image-20210507112712103" style="zoom:40%;" />
+
+实际案例：
+
+访问 [www.shemore.cn](http://www.shemore.cn) 时，由于请求了 [m.beidianyx.com](http://m.beidianyx.com) 下的文件，出现了报错
+
+<img src="/../img/assets_2019/image-20210507112753156.png" alt="image-20210507112753156" style="zoom:40%;" />
+
+1、需要把当前域名配置入Content-Security-Policy中 比如水梦露官网的新域名：[www.shemore.cn](http://www.shemore.cn) [m.beidianyx.com](http://m.beidianyx.com)。
+
+2、如果 route 的配置的地址和当前页面路径不一致时，需要手动在 controller 中配置静态资源路径 `ctx.state.path `
+
+
+
+【启用 CSP的两种方法】
+
+1、HTTP 响应头 **Content-Security-Policy**
+
+<img src="/../img/assets_2019/image-20210507112947501.png" alt="image-20210507112947501" style="zoom:20%;" />
+
+2、网页的<meta>标签
+
+<img src="/../img/assets_2019/image-20210507113015381.png" alt="image-20210507113015381" style="zoom:30%;" />
+
+| default-src **'self'** | 用来设置下面图中各个选项的默认值 **限制所有的外部资源，都只能从当前域名加载** |
+| :--------------------: | ------------------------------------------------------------ |
+|   script-src 'self'    | 脚本：只信任当前域名                                         |
+|    child-src https:    | 框架（frame）：必须使用HTTPS协议加载                         |
+|       report-uri       | 告诉浏览器，应该把注入行为报告给哪个网址                     |
+
