modify：HTTP安全相关补充
modify：HTTP安全相关补充

--- a/_posts/HTTP相关/2021-04-28-20 对称加密 + 非对称加密.md
+++ b/_posts/HTTP相关/2021-04-28-20 对称加密 + 非对称加密.md
@@ -39,20 +39,25 @@ typora-root-url: ..
 分组模式
 让算法用固定长度的密钥加密任意长度的明文，把小秘密（即密钥）转化为大秘密（即密文），最新的分组模式被称为 AEAD
 
+<img src="/../img/assets_2019/image-20210507161247907.png" alt="image-20210507161247907" style="zoom:48%;" />
+
 ## 非对称加密
 -   定义：有两个密钥，一个叫“公钥”（public key），一个叫“私钥”（private key）。两个密钥是不同的，公钥可以公开给任何人使用，而私钥必须严格保密
 
--   常见算法详解
-非对称加密算法的设计要比对称算法难得多，在 TLS 里只有很少的几种，比如 DH、DSA、RSA、ECC 等。
-1、RSA 可能是其中最著名的一个，几乎可以说是非对称加密的代名词，它的安全性基于“整数分解”的数学难题，使用两个超大素数的乘积作为生成密钥的材料，想要从公钥推算出私钥是非常困难的，RSA 密钥的推荐长度至少要 2048 位。
-2、ECC（Elliptic Curve Cryptography）是非对称加密里的“后起之秀”，它基于“椭圆曲线离散对数”的数学难题，使用特定的曲线方程和基点生成公钥和私钥，子算法 ECDHE 用于密钥交换，ECDSA 用于数字签名。
+- 常见算法详解
+  非对称加密算法的设计要比对称算法难得多，在 TLS 里只有很少的几种，比如 DH、DSA、RSA、ECC 等。
+  1、RSA 可能是其中最著名的一个，几乎可以说是非对称加密的代名词，它的安全性基于“整数分解”的数学难题，使用两个超大素数的乘积作为生成密钥的材料，想要从公钥推算出私钥是非常困难的，RSA 密钥的推荐长度至少要 2048 位。
+  2、ECC（Elliptic Curve Cryptography）是非对称加密里的“后起之秀”，它基于“椭圆曲线离散对数”的数学难题，使用特定的曲线方程和基点生成公钥和私钥，子算法 ECDHE 用于密钥交换，ECDSA 用于数字签名。
+
+  <img src="/../img/assets_2019/image-20210507161351538.png" alt="image-20210507161351538" style="zoom:50%;" />
 
 ## 混合加密
 -   为什么要混合？
 虽然非对称加密没有“密钥交换”的问题，但因为它们都是基于复杂的数学难题，运算速度很慢
 <img src="/../img/assets_2019/image-20210428100624487.png" alt="image-20210428100624487" style="zoom:35%;" />
 
--   定义
-1、在通信刚开始的时候使用非对称算法，解决密钥交换的问题：用随机数产生对称算法使用的`会话密钥（session key）`，再用公钥加密 --> 对方拿到密文后用私钥解密，取出会话密钥（会话密钥只有16/32字节）
-2、双方就实现了对称密钥的安全交换，后续就不再使用非对称加密，全都使用对称加密
-<img src="/../img/assets_2019/image-20210428100710312.png" alt="image-20210428100710312" style="zoom:35%;" />
+- 定义
+  1、在通信刚开始的时候使用非对称算法，解决密钥交换的问题：用随机数产生对称算法使用的`会话密钥（session key）`，再用公钥加密 --> 对方拿到密文后用私钥解密，取出会话密钥（会话密钥只有16/32字节）
+  2、双方就实现了对称密钥的安全交换，后续就不再使用非对称加密，全都使用对称加密
+
+  <img src="/../img/assets_2019/116.png" alt="img" style="zoom:50%;" />
