--- a/_posts/HTTP相关/2021-04-28-21 数字签名与证书.md
+++ b/_posts/HTTP相关/2021-04-28-21 数字签名与证书.md
@@ -44,9 +44,12 @@ MD5（Message-Digest 5）、SHA-1（Secure Hash Algorithm 1），它们就是最
 -   签名
 把公钥私钥的用法反过来，之前是公钥加密、私钥解密，现在是**私钥加密、公钥解密**，但又因为非对称加密效率太低，所以私钥只**加密原文的摘要**
 
--   验签
-签名和公钥一样完全公开，任何人都可以获取。但这个签名**只有用私钥对应的公钥**才能解开，拿到摘要后，再比对原文验证完整性
-<img src="/../img/assets_2019/image-20210428101137650.png" alt="image-20210428101137650" style="zoom:0%;" />
+- 验签
+  签名和公钥一样完全公开，任何人都可以获取。但这个签名**只有用私钥对应的公钥**才能解开，拿到摘要后，再比对原文验证完整性
+
+  <img src="/../img/assets_2019/117.png" alt="img" style="zoom:50%;" />
+
+  <img src="/../img/assets_2019/image-20210428101137650.png" alt="image-20210428101137650" style="zoom:30%;" />
 
 ## 公钥的信任 - 数字证书
 找一个公认的可信第三方CA（Certificate Authority，证书认证机构），让它作为“信任的起点，递归的终点”，构建起公钥的信任链
