modify：补充三角形写法
modify：补充三角形写法

--- a/_posts/css相关内容/2019-06-29-《精通CSS 第三版》.md
+++ b/_posts/css相关内容/2019-06-29-《精通CSS 第三版》.md
@@ -223,7 +223,19 @@ h1 {
         }
 ```
 
-![](/img/assets_2019/comment.png)
+<img src="/../img/assets_2019/image-20210602132925968.png" alt="image-20210602132925968" style="zoom:35%;" />
+
+- 三角说明.css
+
+```css
+display: block;
+border: 14px solid rgba(42,50,61,0.66);
+border-top-color: transparent; /*边框部分透明*/
+border-left-color: transparent; /*边框部分透明*/
+border-right-color: transparent;
+```
+
+![image-20210602132842099](/../img/assets_2019/image-20210602132842099.png)
 
 - #### 在空间中行内块的垂直居中.css
 
