--- a/_posts/算法、刷题/2021-06-02-斐波那契数.md
+++ b/_posts/算法、刷题/2021-06-02-斐波那契数.md
@@ -49,3 +49,32 @@ var fib = function(n) {
 ```
 
 <img src="/../img/assets_2019/image-20210602083155227.png" alt="image-20210602083155227" style="zoom:35%;" />
+
+**解法2：**
+
+官方提供的动态规划思路
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var fib = function(n) {
+    // n为0/1
+    if (n < 2) {
+        return n;
+    }
+    let temp1 = 0;
+    let temp2 = 0;
+    let res = 1;
+    for (let i = 2; i <= n; i++) {
+        temp1 = temp2;
+        temp2 = res;
+        res = temp1 + temp2;
+    }
+    return res
+};
+```
+
+<img src="/../img/assets_2019/image-20210602133851923.png" alt="image-20210602133851923" style="zoom:35%;" />
+
