modify：链表信息补充
modify：链表信息补充

--- a/_posts/算法、刷题/2021-06-03-链表 认识链表.md
+++ b/_posts/算法、刷题/2021-06-03-链表 认识链表.md
@@ -21,11 +21,11 @@ function ListNode(x) {
 }
 // 创建新的节点
 // 首节点 head；尾节点 tail - 空指针
-let node1 = ListNode(1);
+let head = ListNode(1);
 let node2 = ListNode(2);
-let node3 = ListNode(3);
+let tail = ListNode(3);
 node1.next = node2;
-node2.next = node3
+node2.next = tail;
 ```
 
 链表是数据结构之一，**其中的数据呈线性排列。在链表中，数据的添加和删除都较为方便，就是访问比较耗费时间**
@@ -57,3 +57,8 @@ node2.next = node3
 
 
 
+链表还有一些特殊情况，譬如：
+
+链表的 tail 指向 head 就形成了环形链表；
+
+链表的每一项保存两个指针，分别用于指向前后两个节点，就形成了双向链表；
