modify：链表 21.合并两个排序的链表
链表 21.合并两个排序的链表

--- a/_posts/算法、刷题/2021-06-03-链表 21.合并两个排序的链表.md
+++ b/_posts/算法、刷题/2021-06-03-链表 21.合并两个排序的链表.md
@@ -19,24 +19,40 @@ typora-root-url: ..
 
 示例：输入：1->2->4, 1->3->4输出：1->1->2->3->4->4
 
-1.自己写的 136ms/35.4MB 10% 也是官方的迭代方法       
+- 1、自己写的， 也是官方的迭代方法     
+
+时间复杂度：O(n)，空间复杂度：xx
+
+  <img src="/../img/assets_2019/image-20210604001540035.png" alt="image-20210604001540035" style="zoom:35%;" />  
 
  ```javascript
  var mergeTwoLists = function (l1, l2) {
     // 得到head            
     var head = new ListNode(-1);
-    var first = head;
+    var temp = head;
+    // 判断需要注意需要两个链表对比的值同时存在才不会报错
     while (l1 != null && l2 != null) {
-      if (l1.val <= l2.val) {
-        first.next = l1;
-        l1 = l1.next;
-      } else {
-        first.next = l2;
-        l2 = l2.next;
-      }
-      first = first.next;
+      // 设置当前节点的值
+      let bool = l1.val > l2.val;
+      temp.next = bool ? l2 : l1;
+      // 入参往后一位
+      l2 = bool ? l2.next : l2;
+      l1 = bool ? l1 : l1.next;
+      // 存储的结果往下一位
+      temp = temp.next;
+      
+      // 以前写的 if 判断，我觉得上面的比较简洁
+      // if (l1.val <= l2.val) {
+      //     temp.next = l1;
+      //     l1 = l1.next;
+      // } else {
+      //     temp.next = l2;
+      //     l2 = l2.next;
+      // }
+      
     }
-    first.next = l1 == null ? l2 : l1;
+    // 跳出循环后，其中哪个链表还没遍历完直接续补上去
+    temp.next = l1 == null ? l2 : l1;
     return head.next
   };
  ```
