modify：链表 21.合并两个排序的链表
链表 21.合并两个排序的链表

--- a/_posts/算法、刷题/2021-06-03-链表 21.合并两个排序的链表.md
+++ b/_posts/算法、刷题/2021-06-03-链表 21.合并两个排序的链表.md
@@ -57,23 +57,23 @@ typora-root-url: ..
   };
  ```
 
-2.方法：递归 
+- 2.方法：递归 
 
-想法：我们可以如下递归地定义在两个链表里的 merge 操作（忽略边界情况，比如空链表等）：       
+时间复杂度：O(n)，空间复杂度：xx
 
- { list1[0] + merge(list1[1:], list2) & list1[0] < list2[0]         
+<img src="/../img/assets_2019/image-20210604134053931.png" alt="image-20210604134053931" style="zoom:35%;" />
 
-{ list2[0] + merge(list1, list2[1:]) & otherwise       
 
-也就是说，两个链表头部较小的一个与剩下元素的 merge 操作结果合并。        
 
-算法：我们直接将以上递归过程建模，首先考虑边界情况。        
+想法：两个链表头部**较小的一个**与剩下所有元素的 merge 操作（利用递归）结果合并。        
 
-特殊的，如果 l1 或者 l2 一开始就是 null ，那么没有任何操作需要合并，所以我们只需要返回非空链表。        
+算法：     
 
-否则，我们要判断 l1 和 l2 哪一个的头元素更小，然后递归地决定下一个添加到结果里的值。        
+边界情况：如果 `l1` 或者` l2` 是` null`，那么没有节点需要比较大小，所以我们只需要返回另一个非空链表。        
 
-如果两个链表都是空的，那么过程终止，所以递归过程最终一定会终止。      
+常态情况：我们要判断 `l1` 和 `l2` 哪一个的头元素更小，然后递归地决定下一个添加到结果里的值。        
+
+结束条件：如果两个链表都是空的，那么过程终止，所以递归过程最终一定会终止。      
 
 ```javascript
 var mergeTwoLists = function (l1, l2) {
