modify：24.反转一个单链表
24.反转一个单链表

--- a/_posts/算法、刷题/2021-06-03-链表 206.反转一个单链表.md
+++ b/_posts/算法、刷题/2021-06-03-链表 206.反转一个单链表.md
@@ -11,9 +11,11 @@ tags:
 typora-root-url: ..
 ---
 
-## 链表 206.反转一个单链表
+## 链表 206/24.反转一个单链表
 
-#### 力扣 206反转一个单链表。        
+#### 力扣 206反转一个单链表/剑指offer 24
+
+定义一个函数，输入一个链表的头节点，反转该链表并输出反转后链表的头节点      
 
 示例:        输入: 1->2->3->4->5->NULL        输出: 5->4->3->2->1->NULL
 
@@ -25,24 +27,29 @@ typora-root-url: ..
   }
 ```
 
-1.自己写的算法：效率比较低15%，108ms/35.6MB         
+1.自己写的算法：
 
-思想是先用数组存储反向链表的值，然后再从链表头到尾重新赋值
+<img src="/../img/assets_2019/image-20210605160413474.png" alt="image-20210605160413474" style="zoom:35%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+思想：用数组存储反向链表的值，然后再从链表头到尾重新赋值
 
 ```javascript
   var reverseList = function (head) {
+    // 存储第一个节点，用于获取节点值 arr
     let pNode = head;
     let arr = [];
-    while (pNode != null) {
-      arr.unshift(pNode.val); //[5,4,3,2,1]               
-      pNode = pNode.next;
-    }
+    while (pNode !== null ) {
+        arr.unshift(pNode.val);
+        pNode = pNode.next
+    };
+    // 存储第一个节点，作为结果的 head
     let first = head;
-    for (let i = 0; i < arr.length; i++) {
-      head.val = arr[i];
-      head = head.next;
+    for(let i=0; i<arr.length; i++) {
+        head.val = arr[i];
+        head = head.next;
     }
-    head = null;
     return first
   };
 ```
