--- a/_posts/算法、刷题/2021-06-03-链表 206.反转一个单链表.md
+++ b/_posts/算法、刷题/2021-06-03-链表 206.反转一个单链表.md
@@ -54,33 +54,83 @@ typora-root-url: ..
   };
 ```
 
-- 2.官方方法一：迭代         86.3% 80ms/34.7MB
+- 2.官方方法一：
 
-假设存在链表 1 → 2 → 3 → Ø，我们想要把它改成 Ø ← 1 ← 2 ← 3。        
+假设存在链表 1 → 2 → 3 → Ø，我们想要把它改成 Ø ← 1 ← 2 ← 3。  
 
-在遍历列表时，将当前节点的 next 指针改为指向前一个元素。        
+通过三个节点迭代： prev 前一个节点，current 当前节点，next 下一个节点   
 
-由于节点没有引用其上一个节点，因此必须事先存储其前一个元素。        
+<img src="/../img/assets_2019/image-20210605182813405.png" alt="image-20210605182813405" style="zoom:35%;" />
 
-在更改引用之前，还需要另一个指针来存储下一个节点。        
-
-不要忘记在最后返回新的头引用！       
+时间复杂度：O(n)，空间复杂度：xx
 
 ```javascript
 var reverseList = function (head) {
     let prev = null;
     let current = head;
     while (current != null) {
+      // 在更改引用之前，还需要另一个指针来存储下一个节点
       let next = current.next;
+      // 当前节点的 next 指针改为指向前一个元素
       current.next = prev;
+      // 由于节点没有引用其上一个节点，事先存储其前一个元素
       prev = current;
+      
+      // 往后走到下一个节点
       current = next;
     }
+  	// 此时，由于 current 已经因为 while 循环走到了下一个 null 节点，所以返回 prev
     return prev
-  }
+}
 ```
 
-3.官方方法二：递归        
+如下是上面算法的拆解版本，还是上面版本好，下面的算法可略过不看：
+
+
+
+<img src="/../img/assets_2019/image-20210605173418297.png" alt="image-20210605173418297" style="zoom:35%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+```js
+var reverseList = function (head) {
+    // head 只有一个节点
+    if (head === null || head.next === null) {
+        return head
+    }
+    let second = head.next;
+
+    // head 只有两个节点
+    if (head.next.next === null) {
+        second.next = head;
+        head.next = null;
+        return second;
+    }
+    let third = second.next;
+
+    // 大于等于3个节点
+    // tail 节点
+    head.next = null;
+    while(third !== null) {
+        second.next = head;
+        // 往后走
+        head = second;
+        second = third;
+        third = third.next;
+    }
+    second.next = head;
+
+    // 返回头节点
+    return second
+
+}
+```
+
+
+
+
+
+- 3.官方方法二：递归        
 
 递归版本稍微复杂一些，其关键在于反向工作。
 
