add：24.反转一个单链表-方法三
add：24.反转一个单链表-方法三

--- a/_posts/算法、刷题/2021-06-03-链表 206.反转一个单链表.md
+++ b/_posts/算法、刷题/2021-06-03-链表 206.反转一个单链表.md
@@ -27,6 +27,10 @@ typora-root-url: ..
   }
 ```
 
+【小声BB】：虽然递归听起来比较高级，但是其实这三种算法都是一个时间复杂度的...所以能解决问题的算法就是好算法
+
+
+
 - 1.自己写的算法：
 
 <img src="/../img/assets_2019/image-20210605160413474.png" alt="image-20210605160413474" style="zoom:35%;" />
@@ -126,13 +130,15 @@ var reverseList = function (head) {
 }
 ```
 
-
-
-
-
-- 3.官方方法二：递归        
+- 3.官方方法二：递归
 
 递归版本稍微复杂一些，其关键在于反向工作。
+
+![image-20210605190748794](/../img/assets_2019/image-20210605190748794.png)
+
+时间复杂度：O(n)，空间复杂度：xx
+
+
 
 假设列表的其余部分已经被反转，现在我该如何反转它前面的部分？       
 
@@ -144,21 +150,24 @@ var reverseList = function (head) {
 
 我们希望 n{k+1} 的下一个节点指向 n{k}  。        
 
-所以，n{k}.next.next = n{k}。        
+所以，n{k}.next.next = n{k}。       
 
-要小心的是 n{1}的下一个必须指向 Ø 。        
+ 
 
-如果你忽略了这一点，你的链表中可能会产生循环。
+边界条件（退出循环条件）： n{1}的下一个必须指向 Ø 。        
 
 如果使用大小为 2 的链表测试代码，则可能会捕获此错误。 
 
 ```javascript
- var reverseList = function (head) {
-    if (head == null || head.next == null) return head;
-    var p = reverseList(head.next);
-    head.next.next = head;
-    head.next = null;
-    return p;
-  }
+var reverseList = function (head) {
+  if (head == null || head.next == null) return head;
+  var p = reverseList(head.next);
+  // 为了便于自己理解，假设输入的是 1->2->3->4->5:
+  // 第一次返回的递归执行到这儿时：p = 5 -> null；head = 4->5（head由于闭包，每次都会比p早一个节点）
+  head.next.next = head; // 5->4->5->4... 循环
+  head.next = null; // 4 -> null
+  // 返回 p 之前，可以看到：p = 5 -> 4 -> null
+  return p;
+}
 ```
 
