add：141. 环形链表 - 内存溢出的算法
add：141. 环形链表 - 内存溢出的算法

--- a/_posts/算法、刷题/2021-06-03-链表 3.链表从尾到头排序.md
+++ b/_posts/算法、刷题/2021-06-03-链表 3.链表从尾到头排序.md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-## 链表 认识链表 + 3.链表从尾到头排序
+## 链表 3.链表从尾到头排序
 
 #### 力扣 3.输入一个链表，按链表从尾到头的顺序返回一个ArrayList。        
 
