add：141. 环形链表 - JSON.stringify
add：141. 环形链表 - JSON.stringify

--- a/_posts/算法、刷题/2021-06-05-链表 141. 环形链表.md
+++ b/_posts/算法、刷题/2021-06-05-链表 141. 环形链表.md
@@ -50,3 +50,19 @@ var hasCycle = function(head) {
 }
 ```
 
+- 2、我觉得有点神奇的/投机的方法
+
+<img src="/../img/assets_2019/image-20210607101412499.png" alt="image-20210607101412499" style="zoom:35%;" />
+
+```js
+// 除非不报错，报错就是有环
+var hasCycle = (head) => {
+  try {
+    JSON.stringify(head);
+  } catch (error) {
+    return true
+  }
+  return false
+}
+```
+
