add：141. 环形链表 - 打tag
add：141. 环形链表 - 打tag

--- a/_posts/算法、刷题/2021-06-05-链表 141. 环形链表.md
+++ b/_posts/算法、刷题/2021-06-05-链表 141. 环形链表.md
@@ -66,3 +66,24 @@ var hasCycle = (head) => {
 }
 ```
 
+
+
+- 3、我觉得还不错的算法
+
+<img src="/../img/assets_2019/image-20210607113630229.png" alt="image-20210607113630229" style="zoom:35%;" />
+
+```js
+var hasCycle = (head) => {
+  while (head !== null) {
+    // 出现已经标记过的节点就代表有重复节点，存在环
+    if(head.tag) {
+    	return true
+    }
+    // 给每一个节点打标记
+    head.tag = true;
+    head = head.next;
+  }
+  return false
+}
+```
+
