add：141. 环形链表 - Set 实现哈希
add：141. 环形链表 - Set 实现哈希

--- a/_posts/算法、刷题/2021-06-05-链表 141. 环形链表.md
+++ b/_posts/算法、刷题/2021-06-05-链表 141. 环形链表.md
@@ -54,6 +54,10 @@ var hasCycle = function(head) {
 
 <img src="/../img/assets_2019/image-20210607101412499.png" alt="image-20210607101412499" style="zoom:35%;" />
 
+时间复杂度：O(n)，空间复杂度：xx
+
+【查了下`JSON.stringify()`原理也是要遍历参数进行处理的】
+
 ```js
 // 除非不报错，报错就是有环
 var hasCycle = (head) => {
@@ -66,11 +70,15 @@ var hasCycle = (head) => {
 }
 ```
 
+补充： `JSON.stringify()`方法对循环引用本身就会报错，截图来源于 MDN
 
+<img src="/../img/assets_2019/image-20210607140736619.png" alt="image-20210607140736619" style="zoom:70%;" />
 
 - 3、我觉得还不错的算法
 
 <img src="/../img/assets_2019/image-20210607113630229.png" alt="image-20210607113630229" style="zoom:35%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
 
 ```js
 var hasCycle = (head) => {
@@ -81,6 +89,29 @@ var hasCycle = (head) => {
     }
     // 给每一个节点打标记
     head.tag = true;
+    head = head.next;
+  }
+  return false
+}
+```
+
+- 4、按照官方提示，哈希表的思维算法
+
+<img src="/../img/assets_2019/image-20210607141925530.png" alt="image-20210607141925530" style="zoom:35%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+```js
+var hasCycle = (head) => {
+  // Set中的元素只会出现一次
+  let set = new Set();
+  while(head !== null){
+    // 判断是否存在过
+    if(set.has(head)) {
+      return true;
+    }
+    // 添加到 set 中
+    set.add(head);
     head = head.next;
   }
   return false
