add： 678. 有效的括号字符串  - 方法二
add： 678. 有效的括号字符串  - 方法二

--- a/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
+++ b/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
@@ -99,3 +99,48 @@ var checkValidString = function(s) {
 };
 ```
 
+- 2、在评论里面翻到的方法
+
+核心思想： `*`号既然可以替换为任意`(``)`，那么就计算一下全部替换成`(`或者`)`时有没有剩余左括号
+
+<img src="/../img/assets_2019/image-20210609211030336.png" alt="image-20210609211030336" style="zoom:50%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+```js
+// 方法二：
+var checkValidString = (s) => {
+    //s: "((*"  (三种情况)
+    
+    //s:"((("  count++
+    //s:"(()"  count--
+    //s:"(( "  count
+    let len = s.length;
+    let minCount = 0;//最少有多少个'('
+    let maxCount = 0;//最多有多少个'('
+    for(let i=0;i<len;i++)
+    {
+        if( s[i] === '(' ) {
+            maxCount++;
+            minCount++;
+        } else if ( s[i] === ')' ) {
+            maxCount--;
+            minCount--;
+        } else if ( s[i] === '*' ) {
+            maxCount++; //'*' 为 '('
+            minCount--; //'*' 为 ')'
+            //'*' 为 空格都不变
+        }
+
+        if( maxCount < 0) {
+            return false;
+        }
+        //当第一个为'*'时只能用作'('  或  空（空可以忽略）
+        if( minCount < 0) {
+            minCount = 0;
+        }
+    }
+    return minCount === 0;
+}
+```
+
