add： 678. 有效的括号字符串  - 方法三 栈
add： 678. 有效的括号字符串  - 方法三 栈

--- a/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
+++ b/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
@@ -144,3 +144,52 @@ var checkValidString = (s) => {
 }
 ```
 
+- 3、在评论区看到的算法，也算是对我第一个算法的优化
+
+核心思想：利用栈的后进先出实现 --> `(`和`*`分别`push`到两个栈中，遇到`)`就弹出一个 -> 直到最后剩余的右括号一定是已经遍历完了 -> 剩余的`(`再找`*`中有没有可以对应的
+
+<img src="/../img/assets_2019/image-20210610201437379.png" alt="image-20210610201437379" style="zoom:35%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+```js
+var checkValidString = (s) => {
+    let pos = true;
+    let leftStack = [];
+    let rightStack = [];
+    let xingStack = [];
+    for(let i = 0; pos && i < s.length; i++) {
+        if(s[i] === '(') {
+            leftStack.push(i);
+        }
+        if(s[i] === '*') {
+            xingStack.push(i);
+        }
+        if(s[i] === ')') {
+            // 左栈中存在，则弹出
+            if (leftStack.length) {
+                leftStack.pop();
+            } else {
+                // 左栈中不存在，星栈中存在
+                if(xingStack.length) {
+                    xingStack.pop();
+                } else {
+                    // 左栈/星栈中都不存在
+                    pos = false;
+                }
+            }
+        }
+    }
+    // 如果左括号存在剩余
+    leftStack.forEach((left, index) => {
+        let xingIdx =  xingStack && xingStack.findIndex(xing => xing >= left);
+        if(xingIdx > -1) {
+            xingStack.splice(xingIdx, 1);
+        } else {
+            pos = false;
+        }
+    })
+    return pos
+}
+```
+
