add：215. 数组中的第K个最大元素 - 方法二：冒泡
add：215. 数组中的第K个最大元素 - 方法二：冒泡

--- a/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
+++ b/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
@@ -40,3 +40,26 @@ var findKthLargest = function (nums, k) {
 };
 ```
 
+- 2、冒泡算法
+
+<img src="/../img/assets_2019/image-20210613163346322.png" alt="image-20210613163346322" style="zoom:35%;" />
+
+时间复杂度：O(n^2)，空间复杂度：xx
+
+```js
+var findKthLargest = function (nums, k) {
+   	// i 要少一个
+    for(let i = 0; i < nums.length - 1; i++) {
+        for(let j = i+1; j < nums.length; j = j+1) {
+          	// 较小的那位交换往后冒泡
+            if(nums[i] < nums[j]) {
+                let temp = nums[i];
+                nums[i] = nums[j];
+                nums[j] = temp;
+            }
+        }
+    }
+    return nums[k - 1];
+};
+```
+
