add：215. 数组中的第K个最大元素 - 方法三：冒泡优化
add：215. 数组中的第K个最大元素 - 方法三：冒泡优化

--- a/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
+++ b/_posts/算法、刷题/2021-06-07-678. 有效的括号字符串.md
@@ -63,3 +63,31 @@ var findKthLargest = function (nums, k) {
 };
 ```
 
+- 3、冒泡算法优化 - 找到第k个值就退出
+
+利用题目找寻的是第k个值，将外部循环控制在k次
+
+<img src="/../img/assets_2019/image-20210614231558216.png" alt="image-20210614231558216" style="zoom:35%;" />
+
+时间复杂度：O(n^2)，空间复杂度：xx
+
+```js
+var findKthLargest = (nums, k) => {
+    // 循环 k 次，只排序到第 k 个大的值
+    for(let i = 0; i < k ; i++) {
+        // 得从后往前，把大值的往前送
+        for (let j = nums.length - 1; j >= 0; j--) {
+            // 前面小于后面，则交换 -> 将值从大往小排
+            if(nums[j] < nums[j + 1]) {
+                let temp = nums[j];
+                nums[j] = nums[j + 1];
+                nums[j + 1] = temp;
+            }
+        }
+    }
+    return nums[k - 1];
+}
+```
+
+
+
