--- a/_posts/算法、刷题/2021-06-10-215.数组中的第K个最大元素.md
+++ b/_posts/算法、刷题/2021-06-10-215.数组中的第K个最大元素.md
@@ -50,13 +50,18 @@ var findKthLargest = function (nums, k) {
 var findKthLargest = function (nums, k) {
    	// i 要少一个
     for(let i = 0; i < nums.length - 1; i++) {
+      	let tag = true;
         for(let j = i+1; j < nums.length; j = j+1) {
           	// 较小的那位交换往后冒泡
             if(nums[i] < nums[j]) {
                 let temp = nums[i];
                 nums[i] = nums[j];
                 nums[j] = temp;
+								tag = false;
             }
+        }
+      	if(tag) {
+            break
         }
     }
     return nums[k - 1];
@@ -75,6 +80,7 @@ var findKthLargest = function (nums, k) {
 var findKthLargest = (nums, k) => {
     // 循环 k 次，只排序到第 k 个大的值
     for(let i = 0; i < k ; i++) {
+		    let tag = true;
         // 得从后往前，把大值的往前送
         for (let j = nums.length - 1; j >= 0; j--) {
             // 前面小于后面，则交换 -> 将值从大往小排
@@ -82,7 +88,11 @@ var findKthLargest = (nums, k) => {
                 let temp = nums[j];
                 nums[j] = nums[j + 1];
                 nums[j + 1] = temp;
+              	tag = false;
             }
+        }
+      	if(tag) {
+          	break
         }
     }
     return nums[k - 1];
